fix anoying over scroll bug on mobile, adjust term edit form layout

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,11 +2,14 @@
   margin-left: 100px;
   margin-right: 100px;
   min-height: 90vh;
+  @media screen and (max-width: 600px) {
+    min-height: 89vh;
+  }
   font-weight: normal;
-  font-family: Roboto,STHeiti,sans-serif;
+  font-family: Roboto, STHeiti, sans-serif;
   @media only screen and (max-width: 600px) {
-    margin-left : 5px;
-    margin-right : 5px;
+    margin-left: 5px;
+    margin-right: 5px;
   }
 }
 
@@ -18,4 +21,14 @@
 .footer {
   height: 2vh;
   padding: 0;
+}
+
+:global(html) {
+  overflow: hidden;
+  height: 100%;
+}
+
+:global(body) {
+  height: 100%;
+  overflow: auto;
 }
