--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -1,7 +1,6 @@
 .header {
   background: black;
   width: 100%;
-  height: 100%;
   padding-left: 20px;
   padding-right: 20px;
   font-size: 20px;
